Fixing all insurance to be stored and displayed on transactions history. Also, made the notifications section dynamically functional.

--- a/client_dashboard.html
+++ b/client_dashboard.html
@@ -366,7 +366,6 @@
         </section>
       </main>
     </div>
-    <script src="scripts/client_dashboard.js"></script>
 
     <!-- Firebase SDK -->
     <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-app-compat.js"></script>
@@ -375,6 +374,9 @@
 
     <!-- Firebase Configuration -->
     <script src="scripts/firebase.js"></script>
+
+    <!-- Client Dashboard Script -->
+    <script src="scripts/client_dashboard.js"></script>
 
     <!-- Logout Confirmation Modal -->
     <div
