--- a/dashboard.html
+++ b/dashboard.html
@@ -40,7 +40,7 @@
           </div>
           <div class="menu-item" onclick="showSection('notification-section')">
             <i class="fas fa-bell"></i> Notification
-            <span class="sidebar-badge">4</span>
+            <span class="sidebar-badge">0</span>
           </div>
         </nav>
         <div class="user-profile">
@@ -962,89 +962,7 @@
               class="notification-list gray-box-scrollable"
               id="notification-list"
             >
-              <!-- Renewal Approved (Green: #66BB6A) -->
-              <div class="notification-item renewal-approved" data-id="1">
-                <input type="checkbox" class="notification-checkbox" />
-                <div class="notification-content">
-                  <div class="notification-title">
-                    Renewal Approved!
-                    <span class="status-badge status-approved">Approved</span>
-                  </div>
-                  <div class="notification-message">
-                    Marlie's renewal of subscription has been approved.
-                  </div>
-                  <div class="notification-time">Today, 10:30 AM</div>
-                </div>
-                <span
-                  class="notification-delete"
-                  onclick="deleteNotification(1)"
-                >
-                  <i class="fas fa-trash-alt"></i>
-                </span>
-              </div>
-
-              <!-- Upcoming Due (Orange: #FFB74D) -->
-              <div class="notification-item upcoming-due" data-id="2">
-                <input type="checkbox" class="notification-checkbox" checked />
-                <div class="notification-content">
-                  <div class="notification-title">
-                    Upcoming Due Reminder!
-                    <span class="status-badge status-upcoming">Upcoming</span>
-                  </div>
-                  <div class="notification-message">
-                    Lynda's annual subscription is due in 3 days.
-                  </div>
-                  <div class="notification-time">Yesterday, 2:15 PM</div>
-                </div>
-                <span
-                  class="notification-delete"
-                  onclick="deleteNotification(2)"
-                >
-                  <i class="fas fa-trash-alt"></i>
-                </span>
-              </div>
-
-              <!-- Overdue (Red: #EF5350) -->
-              <div class="notification-item overdue" data-id="3">
-                <input type="checkbox" class="notification-checkbox" />
-                <div class="notification-content">
-                  <div class="notification-title">
-                    Overdue Reminder!
-                    <span class="status-badge status-overdue">Overdue</span>
-                  </div>
-                  <div class="notification-message">
-                    Donte's annual subscription is overdue.
-                  </div>
-                  <div class="notification-time">Yesterday, 11:45 AM</div>
-                </div>
-                <span
-                  class="notification-delete"
-                  onclick="deleteNotification(3)"
-                >
-                  <i class="fas fa-trash-alt"></i>
-                </span>
-              </div>
-
-              <!-- Second Upcoming Due (Orange: #FFB74D) -->
-              <div class="notification-item upcoming-due" data-id="4">
-                <input type="checkbox" class="notification-checkbox" checked />
-                <div class="notification-content">
-                  <div class="notification-title">
-                    Upcoming Due Reminder!
-                    <span class="status-badge status-upcoming">Upcoming</span>
-                  </div>
-                  <div class="notification-message">
-                    Carlos's quarterly payment is due in 5 days.
-                  </div>
-                  <div class="notification-time">Monday, 9:30 AM</div>
-                </div>
-                <span
-                  class="notification-delete"
-                  onclick="deleteNotification(4)"
-                >
-                  <i class="fas fa-trash-alt"></i>
-                </span>
-              </div>
+              <h2 style="text-align: center; color: #464646">Loading...</h2>
             </div>
           </div>
 
