Added custom fonts

--- a/signup2.html
+++ b/signup2.html
@@ -6,6 +6,12 @@
     <title>Profile Setup - Zamsurgea Community</title>
     <link rel="icon" type="image/png" href="/img/tab-logo.png" />
     <link rel="stylesheet" href="/styles/signup2.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div class="outer-box">
